secondfile/objects/RDS_Pricing_Schedule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ATOM_Deal__c</fullName>
        <formula>Deal__r.ATOM_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATOM Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Deal__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_ID__c</fullName>
        <label>BID ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <formula>Deal__r.Deal_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>RDS_Pricing_Schedule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doc_Viewer_URL__c</fullName>
        <label>Doc Viewer URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_ATTUID__c</fullName>
        <label>EBM ATTUID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_Name__c</fullName>
        <label>EBM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_Sign_Date__c</fullName>
        <label>EBM Sign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EBM_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EBM Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBM_Title__c</fullName>
        <label>EBM Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_the_document__c</fullName>
        <label>Link to the document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PE_Name__c</fullName>
        <label>PE Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Sign_Date__c</fullName>
        <label>PE Sign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PE_User_ID__c</fullName>
        <label>PE User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Status__c</fullName>
        <label>Pricing Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Pricing_Schedule_AccountId__c</fullName>
        <formula>Deal__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Pricing Schedule AccountId</label>
        <type>Text</type>
    </fields>
    <label>RDS/Pricing Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOC-{0000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS/Pricing Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>